# Homomorphic-Vote-Tally

./: README.md
Admin/: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  admin  admin.cpp  adminsealops.cpp  adminsealops.h  cmake_install.cmake  generations.cpp  generations.h
Counter/: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  counter  counter.cpp  counterops.cpp  counterops.h
NOTES/: decrypt_weights_notes.txt  decrypt_weights_notes.txt.save
Proj/BallotBox/: 1_votes_1576256244.sha256  1_votes_1576256244.txt  2_votes.sha256  2_votes.txt  2_votes_1575471563.txt  2_votes_1575471577.sha256  2_votes_1575471577.txt  2_votes_1575471602.sha256  2_votes_1575471602.txt  2_votes_1575474181.sha256  2_votes_1575474181.txt  2_votes_1575646093.sha256  2_votes_1575646098.txt  2_votes_1575646102.txt  2_votes_1576256192.txt  3_votes_1575646107.sha256  3_votes_1575646107.txt  3_votes_1575985054.txt  3_votes_1576250909.sha256  3_votes_1576250909.txt
Proj/CA/: my-ca.crt  my-ca.key
Proj/Counter/: Voter1.txt  Voter2.txt  Voter3.txt  my-ca.crt  results.txt
Proj/Keys/: election_public_key.txt  election_secret_key.txt  election_secret_key.txt.enc  privatekey.pem  symmetric_key.txt
Proj/Tally/: 1_weights.sha256  1_weights.txt  2_weights.sha256  2_weights.txt  3_weights.sha256  3_weights.txt  galois.sha256  my-ca.crt  relin.sha256  relin_keys.txt  weights_file.txt
Proj/Tally/BallotBox/: 1_votes_1575576091.sha256  1_votes_1575576091.txt  1_votes_1575646073.sha256  1_votes_1575646073.txt  1_votes_1575985183.sha256  (+5 more)
Proj/Trustees/: election_secret_key.enc  election_secret_key.sha256  sharefile1.sha256  sharefile1.txt  sharefile10.txt  sharefile100.txt  sharefile101.txt  sharefile102.txt  sharefile103.txt  sharefile104.txt  sharefile105.txt  sharefile106.txt  sharefile107.txt  sharefile108.txt  sharefile109.txt  sharefile11.txt  sharefile110.txt  sharefile111.txt  sharefile112.txt  sharefile113.txt  sharefile114.txt  sharefile115.txt  sharefile116.txt  sharefile117.txt  sharefile118.txt  sharefile119.txt  sharefile12.txt  sharefile120.txt  sharefile121.txt  sharefile122.txt  sharefile123.txt  sharefile124.txt  sharefile125.txt  sharefile126.txt  sharefile127.txt  sharefile128.txt  sharefile129.txt  sharefile13.txt  sharefile130.txt  sharefile131.txt  (+222 more)
TallyOfficial/: 1_votes_1575759918.err  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  file.txt  tally  tally.cpp  tallyfileops.cpp  tallyfileops.h  temp.pem
Voter/: 2_votes$1575471206.txt  2_votes_1575471508.sha256  2_votes_1575471563.sha256  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  dealwithvotes.cpp  dealwithvotes.h  voter  voter.cpp
(+25 files in other folders)
